Switch to Java 21