@@ -3,9 +3,6 @@
  */
 package com.imsweb.staging.tnm;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
 import com.imsweb.staging.entities.SchemaLookup;
@@ -17,7 +14,7 @@ import static com.imsweb.staging.tnm.TnmStagingData.SSF25_KEY;
 
 public class TnmSchemaLookup extends SchemaLookup {
 
-    private static final Set<String> _ALLOWED_KEYS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(PRIMARY_SITE_KEY, HISTOLOGY_KEY, SSF25_KEY, SEX_KEY)));
+    private static final Set<String> _ALLOWED_KEYS = Set.of(PRIMARY_SITE_KEY, HISTOLOGY_KEY, SSF25_KEY, SEX_KEY);
 
     /**
      * Constructor
